Fix spacing on the navigation links
Reset margins on list items in cluster layouts, again because I often
apply cluster to a list. Fix application of the gap property so that
it uses --space and we can take advantage of our space utilities to
adjust the gap per-component and add utilities for fluid spaces as well
as relative spaces.

--- a/src/_scss/_layouts.scss
+++ b/src/_scss/_layouts.scss
@@ -7,9 +7,13 @@
 [data-layout=cluster] {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--gutter);
+  gap: var(--space);
   align-items: center;
   list-style: none;
+
+  > li {
+    margin: 0;
+  }
 }
 
 [data-layout=center] {
