--- a/src/_scss/_utilities.scss
+++ b/src/_scss/_utilities.scss
@@ -1,4 +1,8 @@
 [data-space="0"]  { --space: 0 }
+[data-space="fluid-xs"] { --space: var(--space-fluid-xs) }
+[data-space="fluid-sm"] { --space: var(--space-fluid-sm) }
+[data-space="fluid-md"] { --space: var(--space-fluid-md) }
+[data-space="fluid-lg"] { --space: var(--space-fluid-lg) }
 [data-space="relative-sm"] { --space: var(--space-relative-sm) }
 [data-space="relative-md"] { --space: var(--space-relative-md) }
 [data-space="relative-lg"] { --space: var(--space-relative-lg) }
